<resources>
    <string name="app_name">Project4SW</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="notificar">Notificar</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="registrar_actividad">Registrar Actividad</string>
    <string name="consultar_actividades">Consultar Actividades</string>
    <string name="contrasena_actual">Contraseña Actual</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="confirmacion_nueva_contrasena">Confirmación Nueva Contraseña</string>
    <string name="cancelar">cancelar</string>
    <string name="guardar">guardar</string>
</resources>